--- a/wxcodetrain/pages/viewlearning/viewlearning.wxml
+++ b/wxcodetrain/pages/viewlearning/viewlearning.wxml
@@ -1,16 +1,33 @@
 <view class="section">
-  <view class="section__title">flex-direction: row</view>
-  <view class="flex-wrp" style="flex-direction:row;" hover-class='red'>
+  <view class="section__title">1.flex-direction: row</view>
+  <view class="flex-wrp" style="flex-direction:row;" >
     <view class="flex-item bc_green">1</view>
     <view class="flex-item bc_red">2</view>
     <view class="flex-item bc_blue">3</view>
   </view>
 </view>
 <view class="section">
-  <view class="section__title">flex-direction: column</view>
+  <view class="section__title">2.flex-direction: column</view>
   <view class="flex-wrp" style="height: 300px;flex-direction:column;">
     <view class="flex-item bc_green">1</view>
     <view class="flex-item bc_red">2</view>
     <view class="flex-item bc_blue">3</view>
   </view>
 </view>
+<view class="section">
+<view class="section__title">3.hover-class: red</view>
+<view class="flex-item bc_green" hover-class='red'>1</view>
+</view>
+<view class='section' hover-class='blue'>
+<view class='section_title' >4.hover-stop-propagation:false</view>
+<view class='flex-item bc_green' hover-class='red' hover-stop-propagation='false'>1</view>
+</view>
+<view class='section'>
+<view class='section_title'>5.hover-start-time:50</view>
+<view class='flex-item bc_green' hover-class='red' hover-start-time='100'>1</view>
+</view>
+<view class='section'>
+<view class='section_title'>6.hover-stay-time:5000</view>
+<view class='flex-item bc_green' hover-class='red' hover-stay-time='5000'>1</view>
+</view>
+<view style='height:200px'></view>
